--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,37 @@
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: rgb(250, 249, 213);
-}
-
-
-header h1{
-    font-size: 5rem;
+    height: 100%;
 }
 
 header {
-    position: absolute;
-    margin: 0;
+    display: flex;  
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+
+}
+
+header h1{
+    font-size: 5rem;
+    font-weight: bold;
+}
+
+#time {
+    display: flex;
+    font-size: 2rem;
+    justify-content: center;
+    align-items: center;
+    max-width: 500px;
+}
+
+header p {
+    width: 280px;
     text-align: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+}
+
+header p:nth-child(4){ 
+    font-size: .9rem;
+    margin-top: .5rem;
 }
